# aiogram-miniapp-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  001_initial_schema.sql  Dockerfile  LICENSE  MY-OS_product_document.md  Makefile  README.md  SECURITY.md  SETUP.md  alembic.ini  auth_initdata.py  config.py  docker-compose.dev.yml  docker-compose.yml  import_exercises.py  pyproject.toml  reorganize-docs.sh  requirements.txt  webapp.Dockerfile
.github/workflows/: ci.yml  docker.yml
docs/: README.md  api.md  architecture.md  deployment.md  development.md  getting-started.md
docs/guides/: configuration.md  database.md  deployment.md  docker.md  handlers.md  mini-apps.md  services.md
docs/guides/mini-apps/: README.md  adding-features.md  api-reference.md  authentication.md  deployment.md  examples.md  frontend-guide.md  quickstart.md  security.md  theming.md  troubleshooting.md
docs/reference/: api.md  architecture.md  project-structure.md  rest-api.md
docs/releases/: v1.0.md  v1.1.md
docs/tutorials/: adding-mini-app.md  building-first-bot.md  production-deploy.md
migrations/: env.py
migrations/versions/: 0001_create_users_table.py  0002_add_bio_to_users.py
nginx/: nginx.conf  nginx.dev.conf
scripts/: create_migration.sh  db_seed.py  health_check.py
source/: __main__.py
source/api/: __init__.py  app.py
source/api/middlewares/: __init__.py  auth.py  cors.py  errors.py  logging.py  rate_limit.py
source/api/routes/: __init__.py  auth.py  users.py
source/api/utils/: __init__.py  telegram_auth.py  user_mapper.py
source/config/: config_reader.py
source/constants/: __init__.py  api.py  logging.py
source/database/: __init__.py
source/database/models/: user.py
source/database/repositories/: user.py
source/database/specifications/: __init__.py  base.py  user.py
source/domain/: __init__.py  events.py  value_objects.py
source/dto/: __init__.py  base.py  user.py
source/factory/: __init__.py  api.py  container.py  dishka.py  dispatcher.py  server.py
source/infrastructure/: __init__.py
source/infrastructure/cache/: __init__.py  base.py  redis.py
source/infrastructure/monitoring/: __init__.py  prometheus.py
source/locales/en/: messages.ftl
source/locales/ru/: messages.ftl
source/schemas/: __init__.py  auth.py  base.py  responses.py  user.py
source/services/: __init__.py  base.py  cache_service.py  user_service.py
source/telegram/filters/: __init__.py  admin.py  admin_protect.py  validators.py
source/telegram/handlers/: __init__.py
source/telegram/handlers/user/: fsm.py  (+2 more)
source/telegram/keyboards/: __init__.py  base.py  webapp.py
source/telegram/middlewares/: __init__.py  auth.py  base.py  reporting.py  throttling.py
source/utils/: logger.py  set_commands.py  translator.py  validators.py
tests/: conftest.py
tests/unit/test_repositories/: test_user_repository.py
tests/unit/test_services/: test_user_service.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  i18n.ts  main.tsx
webapp/src/api/: client.ts  endpoints.ts
webapp/src/components/: index.ts
webapp/src/hooks/: index.ts  useAuth.ts  useProfile.ts  useTelegram.ts
webapp/src/pages/: ProfilePage.css  ProfilePage.tsx
webapp/src/store/: useUserStore.ts
webapp/src/styles/: globals.css  telegram-theme.css  variables.css
webapp/src/types/: index.ts  telegram.d.ts  user.ts
(+20 files in other folders)
